# EyeGestures

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Funding.yml  LICENSE  MISSION.md  Makefile  MultipleFacestest.py  PupilLab.py  PupilLabDry.py  README.md  app.py  app.spec  app_win.py  app_win.spec  dataCollection.py  display.py  example.py  fitTestData.py  liveTest.py  main.py  pupilDetection.py  pybuild.bat  pybuild.sh  pyproject.toml  record.py  requirements.txt  requirements_dev.txt  test.py  testTime.py  test_app.py  tmp.py  vectorMap.py
.github/workflows/: code_quality.yml  polar_adds.yml  polar_ads.yml  pylint.yml
Cpp/: CMakeLists.txt  main.cpp
Cpp/CMake/: CPM.cmake  FindVersion.cmake.cmake  Findopencv.cmake
appUtils/: ActivationZone.py  CalibrationWidget.py  EyeGestureWidget.py  RoiViewer.py  dot.py  dot_windows.py
apps/: app.py  app_win.py  app_win.spec
apps/appUtils/: ActivationZone.py  CalibrationWidget.py  EyeGestureWidget.py  RoiViewer.py  data_saver.py  dot_windows.py
examples/: PupilLab.py  PupilLabDry.py  simple_example.py  simple_example_v2.py  simple_example_v2_fast.py  simple_example_v3.py  troubleshooting_camera.py
examples/legacy/: display_calibration.py  simple_example.py
eyeGestures/: Fixation.py  __init__.py  calibration.py  calibration_v1.py  calibration_v2.py  contexter.py  eye.py  eyeframes.py  eyegestures.py  eyegestures_v3.py  eyetracker.py  face.py  gazeContexter.py  gazeEstimator.py  gaze_contexter.py  gazeestimator.py  gevent.py  nose.py  processing.py  pupil.py  requirements.txt  scalling_test.py  screenTracker.py  screenTracker_test.py  utils.py
eyeGestures/screenTracker/: clusters.py  dataPoints.py  heatmap.py  screenTracker.py
eyeGestures/screen_tracker/: clusters.py  dataPoints.py  heatmap.py  screenTracker.py  screenTracker_test.py
lab/: components.py  componnets.py  pupillab.py
scripts/: csv_reader.py  heatmap_maker.py
tests/: MultipleFacestest.py  test_gestures.py
tools/: detect_things_on_screen.py  find_direction_vector.py  pupilDetection.py
utils/: eyeframes.py  eyetracker.py  utils.py
