[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]

dependencies = [
  "matplotlib>=3.8.2",
  "mediapipe>=0.10.8",
  "numpy>=1.26.4",
  "Pillow>=10.3.0",
  "PyAutoGUI>=0.9.54",
  "pycocotools>=2.0.7",
  "pygame>=2.5.2",
  "pynput>=1.7.6",
  "PySide2>=5.15.2.1",
  "pytest>=7.4.2",
  "scikit_learn>=1.3.2",
  "scipy>=1.12.0",
  "screeninfo>=0.8.1",
  "setuptools>=70.0.0",
  "scipy>=1.12.0",
  "opencv-contrib-python>=4.9.0.80",
  "xlwt>=1.3.0"
]

include = [
  "eyeGestures/*.py",
  "eyeGestures/screenTracker/*.py",
  "eyeGestures/eyegestures.py"
]

exclude = [
  "*.json",
  "lab/*",
  "app.py",
  "PupilLab.py",
  "test_app.py",
  "test.py",
  "tools/*"
]

[project]
name = "eyeGestures"
version = "3.2.4"
authors = [
  { name="Piotr Walas", email="piotr.walas@eyegestures.com" },
]
maintainers = [
  { name="Piotr Walas", email="piotr.walas@eyegestures.com" }
]
description = "Package for eye tracking algorithm allowing for development of gaze controlled computer interface"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
keywords = ["eyetracking", "eye", "gaze", "tracking", "gazetracking"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/NativeSensors/EyeGestures"
Issues = "https://github.com/NativeSensors/EyeGestures/Issues"